# cmucam-viewer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  cmucam.c  cmucam.h  main.c  main.cpp  shaders.c  shaders.h
tools/: cmucam-still.py
